# aw-server-rust

./: .gitignore  .gitmodules  Cargo.toml  Makefile  cypress.config.js  install-ndk.sh  make-cypress-test.js  package-lock.json  package.json
aw-client-rust/: Cargo.toml
aw-server/: Cargo.toml
aw-server/src/: device_id.rs  dirs.rs  lib.rs  main.rs  plugins.rs
aw-server/src/android/: mod.rs
aw-server/src/endpoints/: cors.rs  mod.rs
cypress/: test-app.html
cypress/e2e/: note-delete-function.spec.js  note-editor-comments.spec.js  note-relations-testing.spec.js  tag-highlight.spec.js
cypress/fixtures/: example.json
cypress/support/: commands.js  e2e.js
