[package]
name = "aw-client-rust"
version = "0.1.0"
edition = "2021"
authors = ["Johan Bjäreholt <johan@bjareho.lt>"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
gethostname = "0.4"
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
aw-models = { path = "../aw-models" }
tokio = { version = "1.28.2", features = ["rt"] }

[dev-dependencies]
aw-datastore = { path = "../aw-datastore" }
aw-server = { path = "../aw-server", default-features = false, features=[] }
rocket = "0.5.0-rc.4"
time = "0.3.23"  # 必须≥0.4.13，适配 Rust 1.80+
tokio-test = "*"
